update mobile and dark mode issues

--- a/assets-nsg/css/dark.css
+++ b/assets-nsg/css/dark.css
@@ -80,11 +80,13 @@ body{
   background:#343434;
   color: #ffff00;
 }
-.site-header .navbar .nav-item .dropdown-menu, .veer-accordion .accordion-item, .photogallery-wrap .photogallery-slider .img-title{
-  background: #000;
-  border: 1px solid #fff;
+.site-header .navbar .nav-item .dropdown-menu, .veer-accordion .accordion-item, .photogallery-wrap .photogallery-slider .img-title, #common-slider .owl-nav button, .common-slider .owl-nav button, .common-slider .owl-nav button:hover, #common-slider .owl-dot.active{
+  background: #000 !important;
+  border: 1px solid #fff !important;
   color: #fff;
 }
+
+#common-slider .owl-nav span, .common-slider .owl-nav button span{filter: brightness(10);}
 
 .news-title{border-right: 1px solid #fafafa;  background: #000;}
 
